# freeture

./: .gitattributes  .gitignore  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  THANKS  acx_boost.m4  acx_pylon.m4  config.h.in  configure.ac  freeture_metric  index.html
cmake/: CMakeCache copy.txt  CMakeCache.txt  CMakeCache2.txt  CMakeLists.txt  cmake_install.cmake  config.h  config.h.in  data  freestart.sh  freeture.cbp  freeture.layout  install_manifest.txt  out.txt
cmake/CMakeFiles2/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
cmake/CMakeFiles2/freeture.dir/: DependInfo.cmake  compiler_depend.make  flags.make
cmake/CMakeFiles2/freeture.dir/home/mattia/Documents/progetti/freeture/src/: AcqSchedule.cpp.o.d  AcqThread.cpp.o.d  Base64.cpp.o.d  CameraFrames.cpp.o.d  CameraGigeAravis.cpp.o.d  CameraGigeAravisScanner.cpp.o.d  CameraGigePylon.cpp.o.d  CameraGigeTis.cpp.o.d  CameraLucidArena.cpp.o.d  CameraLucidArenaScanner.cpp.o.d  CameraLucidArena_PHX016S.cpp.o.d  CameraLucidArena_PHX016SScanner.cpp.o.d  CameraScanner.cpp.o.d  CameraV4l2.cpp.o.d  CameraVideo.cpp.o.d  CameraWindows.cpp.o.d  CfgLoader.cpp.o.d  CfgParam.cpp.o.d  Conversion.cpp.o.d  DetThread.cpp.o.d  DetectionTemplate.cpp.o.d  DetectionTemporal.cpp.o.d  Device.cpp.o.d  EParser.cpp.o.d  Ephemeris.cpp.o.d  ErrorManager.cpp.o.d  ExposureControl.cpp.o.d  Fits.cpp.o.d  Fits2D.cpp.o.d  Fits3D.cpp.o.d  Frame.cpp.o.d  Freeture.cpp.o.d  GlobalEvent.cpp.o.d  Histogram.cpp.o.d  HistogramGray.cpp.o.d  HistogramRGB.cpp.o.d  ImgProcessing.cpp.o.d  LocalEvent.cpp.o.d  Mask.cpp.o.d  NodeExporterMetrics.cpp.o.d  (+8 more)
cmake/Modules/: FindArenaSDK.cmake  FindGenICam.cmake  FindPylon.cmake  Findaravis.cmake
cmakebk/: CMakeLists.txt  cmake_install.cmake  freestart.sh  out.txt
cmakebk/Modules/: FindArenaSDK.cmake
doc/: Makefile.am  freeture.1.in
share/: configuration.cfg  configuration_BASLER1300gm.cfg  configuration_BASLERacA1440-73gm.cfg  configuration_PH016.cfg  configuration_PH032.cfg  log4cpp.properties
src/: AcqSchedule.cpp  AcqSchedule.h  AcqThread.cpp  AcqThread.h  ArenaSDKManager.cpp  ArenaSDKManager.h  Base64.cpp  Base64.h  Camera.h  CameraDeviceManager.cpp  CameraDeviceManager.h  CameraFactory.cpp  CameraFactory.h  CameraFirstInit.h  CameraFrames.cpp  CameraFrames.h  CameraGigeAravis.cpp  CameraGigeAravis.h  CameraGigeAravisScanner.cpp  CameraGigeAravisScanner.h  CameraGigeAravis_Scanner.cpp  CameraGigeAravis_Scanner.h  CameraGigePylon.cpp  CameraGigePylon.h  CameraGigeTis.cpp  CameraGigeTis.h  CameraLucidAravis.cpp  CameraLucidAravis.h  CameraLucidAravis_Scanner.cpp  CameraLucidAravis_Scanner.h  CameraLucidArena.cpp  CameraLucidArena.h  CameraLucidArenaScanner.cpp  CameraLucidArenaScanner.h  CameraLucidArena_PHX016S.cpp  CameraLucidArena_PHX016S.h  CameraLucidArena_PHX016SScanner.cpp  CameraLucidArena_PHX016SScanner.h  CameraLucidArena_Scanner.cpp  CameraLucidArena_Scanner.h  (+107 more)
src/sdk/: arenasdk.conf  install.sh
src/sdk/include/Arena/: Arena.h  ArenaApi.h  ArenaDefs.h  DeviceInfo.h  FeatureStream.h  GenApiCustom.h  IBuffer.h  IChunkData.h  IDevice.h  IDisconnectCallback.h  IImage.h  ISystem.h  ImageFactory.h  InterfaceInfo.h  PFNCCustom.h
src/sdk/include/GenTL/: GenTLCustom.h
src/sdk/include/Save/: ImageParams.h  ImageReader.h  ImageWriter.h  SaveApi.h  SaveDefs.h  Version.h  VideoParams.h  VideoRecorder.h
src/sdk/lib64/: libarena.so.0  libarenac.so.0  libarenac.so.0.1.68  libarenacd.so.0.1.68  libgentl.so.0  liblucidlog.so.0  liblucidlog.so.0.1.68  liblucidlogd.so.0  liblucidlogd.so.0.1.68  libsave.so.0  libsavec.so.0  libsavec.so.0.1.68  libsavecd.so.0.1.68
test/: show_file_timestamp_difference.py
